# camera_configuration

./: CMakeLists.txt  linPlay.sh  majestic.yaml  winPlay.bat
src/: main.cpp
